--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -8,23 +8,33 @@
 		<h1 class="page-name">Смотри, я делаю сайт</h1>
 	</header>
 	<main>
+	{% for post in posts %}
 		<div class="post">
-			<span class="post__date">13.12.2017</span>
+			<span class="post__date">published: {{ post.published_date }}</span>
 			<h2 class="post__name">
-				<a class="post__link">Ляляля</a>
+				<a class="post__link">{{ post.title }}</a>
 			</h2>
-			<p class="post__text">тралялял</p>
+			<p class="post__text">{{ post.text|linebreaksbr }}</p>
 		</div>
+	{% endfor %}
+	{% for post in posts %}
 		<div class="post">
-		<span class="post__date">12.03.2016</span>
-			<h2 class="post__name">Труляля</h2>
-			<p class="post__text">ничего</p>
+			<span class="post__date">published: {{ post.published_date }}</span>
+			<h2 class="post__name">
+				<a class="post__link">{{ post.title }}</a>
+			</h2>
+			<p class="post__text">{{ post.text|linebreaksbr }}</p>
 		</div>
+	{% endfor %}
+	{% for post in posts %}
 		<div class="post">
-			<span class="post__date">09.02.1900</span>
-			<h2 class="post__name">Я - король мира</h2>
-			<p class="post__text">что вам еще надо</p>
+			<span class="post__date">published: {{ post.published_date }}</span>
+			<h2 class="post__name">
+				<a class="post__link">{{ post.title }}</a>
+			</h2>
+			<p class="post__text">{{ post.text|linebreaksbr }}</p>
 		</div>
+	{% endfor %}
 	</main>
 </body>
 </html>
